# YOLOX

./: Dockerfile  Makefile  eval.sh  pyproject.toml
exps/example/custom/: yolox_s_insect.py
tools/: demo.py  train.py  vis.py
