[tool.poetry]
name = "yolox"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
opencv-python = "^4.5.4"
loguru = "^0.5.3"
scikit-image = "^0.19.0"
tqdm = "^4.62.3"
torchvision = "^0.11.1"
Pillow = "^8.4.0"
thop = "^0.0.31"
ninja = "^1.10.2"
tabulate = "^0.8.9"
tensorboard = "^2.7.0"
onnx = "1.8.1"
onnxruntime = "1.8.0"
onnx-simplifier = "0.3.5"
pycocotools = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
